force-app/main/default/objects/Opportunity/fields/Number_Of_Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Days_Open__c</fullName>
    <formula>BM_Booking_Date__c -  DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Days Open/Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>