force-app/main/default/objects/Opportunity/fields/Number_of_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Line_Items__c</fullName>
    <description>Total number of Line Items in an opportunity.</description>
    <label>Number of Line Items</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>