force-app/main/default/objects/Opportunity/fields/Old_CPDD_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_CPDD_Date__c</fullName>
    <label>Old CPDD Date</label>
    <type>Date</type>
</CustomField>