force-app/main/default/objects/Opportunity/fields/OLI_Quantity__c.field-meta.xml
<CustomField>
    <fullName>OLI_Quantity__c</fullName>
    <label>OLI Quantity</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Status__c</field>
        <operation>notEqual</operation>
        <value>Rejected, Cancelled</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Is_B2B_Hardware_as_LinItems__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>