force-app/main/default/objects/Opportunity/fields/Onhold_WO_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Onhold_WO_Quantity__c</fullName>
    <label>Onhold WO Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>