force-app/main/default/objects/Opportunity/fields/Operation_Approval_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Operation_Approval_Lead_Time__c</fullName>
    <formula>Plant_Added_Date__c  -   SM_Booking_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operation Approval Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>