force-app/main/default/objects/Opportunity/fields/Opp_Mobile_10digit__c.field-meta.xml
<CustomField>
    <fullName>Opp_Mobile_10digit__c</fullName>
    <formula>IF(LEN(Mobile__c) == 13, RIGHT(Mobile__c, 10), Mobile__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Mobile (10digit)</label>
    <type>Text</type>
</CustomField>