force-app/main/default/objects/Opportunity/fields/Opportunity_Cloned_from_Booking_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Cloned_from_Booking_ID__c</fullName>
    <label>Opportunity Cloned from Booking ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>