force-app/main/default/objects/Opportunity/fields/Opportunity_Creation_Year__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Creation_Year__c</fullName>
    <formula>YEAR( DATEVALUE(CreatedDate ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Creation Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>