force-app/main/default/objects/Opportunity/fields/Opportunity_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_On_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity On-Hold</label>
    <type>Checkbox</type>
</CustomField>