force-app/main/default/objects/Opportunity/fields/Opportunity_Owner_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Phone_No__c</fullName>
    <formula>MID( Owner.MobilePhone , 2, 3)+
MID( Owner.MobilePhone , 7, 3)+
MID( Owner.MobilePhone , 11, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Phone No.</label>
    <type>Text</type>
</CustomField>