force-app/main/default/objects/Opportunity/fields/Order_Domain__c.field-meta.xml
<CustomField>
    <fullName>Order_Domain__c</fullName>
    <label>Order Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>B2C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>