force-app/main/default/objects/Opportunity/fields/Order_SMS_Sent__c.field-meta.xml
<CustomField>
    <fullName>Order_SMS_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order SMS Sent</label>
    <type>Checkbox</type>
</CustomField>