force-app/main/default/objects/Opportunity/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <defaultValue>&quot;ZSAS&quot;</defaultValue>
    <label>Order Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>