force-app/main/default/objects/Opportunity/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>Booking ID</label>
    <type>AutoNumber</type>
</CustomField>