force-app/main/default/objects/Opportunity/fields/Overall_Accessory_Procurement_Price__c.field-meta.xml
<CustomField>
    <fullName>Overall_Accessory_Procurement_Price__c</fullName>
    <label>Overall Accessory Procurement Price</label>
    <summarizedField>OpportunityLineItem.Total_Accessory_Procurement_Price__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>