force-app/main/default/objects/Opportunity/fields/Overall_Order_Level_Proc_Price__c.field-meta.xml
<CustomField>
    <fullName>Overall_Order_Level_Proc_Price__c</fullName>
    <label>Overall Order Level Proc Price</label>
    <summarizedField>OpportunityLineItem.Total_Item_Procurement_Price__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>