force-app/main/default/objects/Opportunity/fields/Overall_Order_Margin__c.field-meta.xml
<CustomField>
    <fullName>Overall_Order_Margin__c</fullName>
    <formula>Overall_T2D_Price__c  -  Overall_Order_Level_Proc_Price__c</formula>
    <label>Overall Order Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>