force-app/main/default/objects/Opportunity/fields/Overall_T2D_Green_Channel__c.field-meta.xml
<CustomField>
    <fullName>Overall_T2D_Green_Channel__c</fullName>
    <label>Overall T2D Green Channel</label>
    <summarizedField>OpportunityLineItem.Total_Item_Guideline_Price__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Is_B2B_Hardware_as_LinItems__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>