force-app/main/default/objects/Opportunity/fields/Overall_T2D_Green_Channel_with_Acc__c.field-meta.xml
<CustomField>
    <fullName>Overall_T2D_Green_Channel_with_Acc__c</fullName>
    <label>Overall T2D Green Channel with Acc</label>
    <summarizedField>OpportunityLineItem.Total_Item_Guideline_Price__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>