force-app/main/default/objects/Opportunity/fields/Overall_T2D_Price__c.field-meta.xml
<CustomField>
    <fullName>Overall_T2D_Price__c</fullName>
    <label>Overall T2D Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>