force-app/main/default/objects/Opportunity/fields/Overall_T2D_Price_Per_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Overall_T2D_Price_Per_Line_Item__c</fullName>
    <label>Overall T2D Price Per Line Item</label>
    <summarizedField>OpportunityLineItem.Overall_T2d_Price_Required__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>