force-app/main/default/objects/Opportunity/fields/Parent_Order__c.field-meta.xml
<CustomField>
    <fullName>Parent_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Order</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Partial_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>