force-app/main/default/objects/Opportunity/fields/Part_Inst_HO_Pending_WO_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Part_Inst_HO_Pending_WO_Quantity__c</fullName>
    <label>Part Inst- HO Pending WO Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>