force-app/main/default/objects/Opportunity/fields/Passive__c.field-meta.xml
<CustomField>
    <fullName>Passive__c</fullName>
    <formula>If((Customer_Characteristics__c = &apos;Passive&apos;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>