force-app/main/default/objects/Opportunity/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <defaultValue>&quot;Z001&quot;</defaultValue>
    <label>Payment Term</label>
    <length>18</length>
    <type>Text</type>
</CustomField>