force-app/main/default/objects/Opportunity/fields/Payment_Term_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Picklist__c</fullName>
    <label>Payment Term Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z001</fullName>
            </value>
            <value>
                <fullName>ZZ36</fullName>
            </value>
            <value>
                <fullName>ZZ28</fullName>
            </value>
            <value>
                <fullName>ZZ33</fullName>
            </value>
            <value>
                <fullName>ZZ41</fullName>
            </value>
            <value>
                <fullName>ZZ09</fullName>
            </value>
            <value>
                <fullName>ZZ38</fullName>
            </value>
            <value>
                <fullName>Z002</fullName>
            </value>
            <value>
                <fullName>ZZ39</fullName>
            </value>
            <value>
                <fullName>ZZ44</fullName>
            </value>
            <value>
                <fullName>ZZ40</fullName>
            </value>
            <value>
                <fullName>ZZ34</fullName>
            </value>
            <value>
                <fullName>LI90</fullName>
            </value>
            <value>
                <fullName>YX10</fullName>
            </value>
            <value>
                <fullName>YX15</fullName>
                <isActive>false</isActive>
                <label>YX15</label>
            </value>
            <value>
                <fullName>ZX30</fullName>
                <isActive>false</isActive>
                <label>ZX30</label>
            </value>
            <value>
                <fullName>ZX45</fullName>
                <isActive>false</isActive>
                <label>ZX45</label>
            </value>
            <value>
                <fullName>ZX75</fullName>
                <isActive>false</isActive>
                <label>ZX75</label>
            </value>
            <value>
                <fullName>ZX90</fullName>
                <isActive>false</isActive>
                <label>ZX90</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>