force-app/main/default/objects/Opportunity/fields/Payu_Url__c.field-meta.xml
<CustomField>
    <fullName>Payu_Url__c</fullName>
    <label>Payu Url</label>
    <length>100</length>
    <type>Text</type>
</CustomField>