force-app/main/default/objects/Opportunity/fields/PCR_Approval_Pending_Date__c.field-meta.xml
<CustomField>
    <fullName>PCR_Approval_Pending_Date__c</fullName>
    <label>PCR Approval Pending Date</label>
    <type>Date</type>
</CustomField>