force-app/main/default/objects/Opportunity/fields/Pending_for_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Pending_for_Feedback__c</fullName>
    <formula>If((ISPICKVAL(QD_FeedBack_Status__c, &apos;Pending for Feedback&apos;)), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending for Feedback</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>