force-app/main/default/objects/Opportunity/fields/Per_Sqft_Selling_Rate__c.field-meta.xml
<CustomField>
    <fullName>Per_Sqft_Selling_Rate__c</fullName>
    <label>Per Sqft Selling Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5000 - 7000</fullName>
            </value>
            <value>
                <fullName>7000 - 9000</fullName>
            </value>
            <value>
                <fullName>4000 - 5000</fullName>
            </value>
            <value>
                <fullName>More than 9000</fullName>
            </value>
            <value>
                <fullName>Less than 4000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>