force-app/main/default/objects/Opportunity/fields/Percentage_Margin__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Margin__c</fullName>
    <formula>(B2B_Total_Order_Margin__c  /  Overall_Order_Level_Proc_Price__c) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>