force-app/main/default/objects/Opportunity/fields/Place_PO_Date__c.field-meta.xml
<CustomField>
    <fullName>Place_PO_Date__c</fullName>
    <label>Place PO Date</label>
    <type>Date</type>
</CustomField>