force-app/main/default/objects/Opportunity/fields/Plant_Added_Date__c.field-meta.xml
<CustomField>
    <fullName>Plant_Added_Date__c</fullName>
    <label>Plant Added Date</label>
    <type>Date</type>
</CustomField>