force-app/main/default/objects/Opportunity/fields/PlantAllocated__c.field-meta.xml
<CustomField>
    <fullName>PlantAllocated__c</fullName>
    <label>PlantAllocated</label>
    <length>30</length>
    <type>Text</type>
</CustomField>