force-app/main/default/objects/Opportunity/fields/Po_To_Plant_Diff__c.field-meta.xml
<CustomField>
    <fullName>Po_To_Plant_Diff__c</fullName>
    <formula>Customer_Promised_Delivery_Date_Final__c - Required_Date_of_Manufacturing_RDM__c - 21</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Po To Plant Diff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>