force-app/main/default/objects/Opportunity/fields/Post_PO_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Post_PO_Cancellation_Reason__c</fullName>
    <label>Post PO Cancellation Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>