force-app/main/default/objects/Opportunity/fields/Preferred_Plant__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Plant__c</fullName>
    <label>Preferred Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ahlada - A611</fullName>
            </value>
            <value>
                <fullName>GMP - G325</fullName>
            </value>
            <value>
                <fullName>TSPL - T486</fullName>
            </value>
            <value>
                <fullName>SEPL - SK79</fullName>
            </value>
            <value>
                <fullName>NCL - N3B3</fullName>
            </value>
            <value>
                <fullName>Bhawani - BN39</fullName>
            </value>
            <value>
                <fullName>Iclean - I333</fullName>
            </value>
            <value>
                <fullName>SagarAsia - SMLO</fullName>
            </value>
            <value>
                <fullName>STARFAB - SMK7</fullName>
            </value>
            <value>
                <fullName>G325-MAH</fullName>
            </value>
            <value>
                <fullName>KRUTI - K3E0</fullName>
            </value>
            <value>
                <fullName>DORMAKABA-D575</fullName>
            </value>
            <value>
                <fullName>Geze-G0B2</fullName>
            </value>
            <value>
                <fullName>Dorset-D786</fullName>
            </value>
            <value>
                <fullName>Iclean - I333TG</fullName>
            </value>
            <value>
                <fullName>ULT - U0A3</fullName>
            </value>
            <value>
                <fullName>Component-C0D9</fullName>
            </value>
            <value>
                <fullName>GWS - G0G7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>