force-app/main/default/objects/Opportunity/fields/Priority_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Priority_Order_Date__c</fullName>
    <label>Priority Order Date</label>
    <type>Date</type>
</CustomField>