force-app/main/default/objects/Opportunity/fields/Priority_Order_Reason__c.field-meta.xml
<CustomField>
    <fullName>Priority_Order_Reason__c</fullName>
    <label>Priority Order Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>