force-app/main/default/objects/Opportunity/fields/Priority_Order_Reason_List__c.field-meta.xml
<CustomField>
    <fullName>Priority_Order_Reason_List__c</fullName>
    <label>Priority Order Reason List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>