force-app/main/default/objects/Opportunity/fields/Project_Executive__c.field-meta.xml
<CustomField>
    <fullName>Project_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>