force-app/main/default/objects/Opportunity/fields/Project_Files_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Project_Files_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Files Uploaded</label>
    <type>Checkbox</type>
</CustomField>