force-app/main/default/objects/Opportunity/fields/Project_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Project_Quantity__c</fullName>
    <formula>Project__r.Project_Quantity__c</formula>
    <label>Project Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>