force-app/main/default/objects/Opportunity/fields/Promotors_del__c.field-meta.xml
<CustomField>
    <fullName>Promotors_del__c</fullName>
    <formula>If((Customer_Characteristics__c = &apos;Promotor&apos;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>