force-app/main/default/objects/Opportunity/fields/QD_FeedBack_Status__c.field-meta.xml
<CustomField>
    <fullName>QD_FeedBack_Status__c</fullName>
    <label>QD FeedBack Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending for Feedback</fullName>
            </value>
            <value>
                <fullName>Response Received from Digital</fullName>
            </value>
            <value>
                <fullName>Response Received from Voice</fullName>
            </value>
            <value>
                <fullName>Response Not Received</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <isActive>false</isActive>
                <label>Submitted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>