force-app/main/default/objects/Opportunity/fields/QD_FeedBack_Status_WhatsApp__c.field-meta.xml
<CustomField>
    <fullName>QD_FeedBack_Status_WhatsApp__c</fullName>
    <label>QD FeedBack Status WhatsApp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending for Feedback</fullName>
            </value>
            <value>
                <fullName>Response Received from Digital</fullName>
            </value>
            <value>
                <fullName>Response Received from Voice</fullName>
            </value>
            <value>
                <fullName>Response Not Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>