force-app/main/default/objects/Opportunity/fields/QD_Response_Status__c.field-meta.xml
<CustomField>
    <fullName>QD_Response_Status__c</fullName>
    <label>QD Response Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>