force-app/main/default/objects/Opportunity/fields/QD_Response_Status_WhatsApp__c.field-meta.xml
<CustomField>
    <fullName>QD_Response_Status_WhatsApp__c</fullName>
    <label>QD Response Status WhatsApp</label>
    <length>250</length>
    <type>Text</type>
</CustomField>