force-app/main/default/objects/Opportunity/fields/QD_Url__c.field-meta.xml
<CustomField>
    <fullName>QD_Url__c</fullName>
    <label>QD Url</label>
    <length>100</length>
    <type>Text</type>
</CustomField>