force-app/main/default/objects/Opportunity/fields/QD_Url_WhatsApp__c.field-meta.xml
<CustomField>
    <fullName>QD_Url_WhatsApp__c</fullName>
    <label>QD Url WhatsApp</label>
    <length>90</length>
    <type>Text</type>
</CustomField>