force-app/main/default/objects/Opportunity/fields/Quality_alert__c.field-meta.xml
<CustomField>
    <fullName>Quality_alert__c</fullName>
    <label>Quality alert</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>