force-app/main/default/objects/Opportunity/fields/Quantity_of_External_Doors__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_External_Doors__c</fullName>
    <label>Quantity of External Doors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>