force-app/main/default/objects/Opportunity/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <formula>IF(ISPICKVAL( Leadopp__r.Rating ,&apos;Hot&apos;), &apos;Hot&apos;,
IF(ISPICKVAL( Leadopp__r.Rating ,&apos;Cold&apos;), &apos;Cold&apos;,
IF(ISPICKVAL( Leadopp__r.Rating ,&apos;Warm&apos;), &apos;Warm&apos;, &apos;&apos;) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating</label>
    <type>Text</type>
</CustomField>