force-app/main/default/objects/Opportunity/fields/RDD_Escalation_days__c.field-meta.xml
<CustomField>
    <fullName>RDD_Escalation_days__c</fullName>
    <formula>Expected_Delivery_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RDD Escalation days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>