force-app/main/default/objects/Opportunity/fields/Reason_for_Sending_to_Booking_Stage__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Sending_to_Booking_Stage__c</fullName>
    <label>Reason for Sending to Booking Stage</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>