force-app/main/default/objects/Opportunity/fields/Record_type__c.field-meta.xml
<CustomField>
    <fullName>Record_type__c</fullName>
    <label>Record type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>