force-app/main/default/objects/Opportunity/fields/Remarks_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Allocated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remarks Allocated</label>
    <type>Checkbox</type>
</CustomField>