force-app/main/default/objects/Opportunity/fields/Remarks_for_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Remarks_for_Manufacturer__c</fullName>
    <label>Remarks for Manufacturer</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>