force-app/main/default/objects/Opportunity/fields/Remarks_on_Quality_alert__c.field-meta.xml
<CustomField>
    <fullName>Remarks_on_Quality_alert__c</fullName>
    <label>Remarks on Quality alert</label>
    <type>TextArea</type>
</CustomField>