force-app/main/default/objects/Opportunity/fields/Replacement_Id__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Id__c</fullName>
    <description>Used to generate when order is spare accessory</description>
    <formula>IF(
  NOT(ISBLANK(TEXT(Replacement_Material_Group__c))),
  TEXT(Replacement_Material_Group__c) &amp; &quot;_&quot; &amp; Cloned_Opportunity__r.OrderNumber__c,
  &quot;&quot;
)</formula>
    <label>Replacement Id</label>
    <type>Text</type>
</CustomField>