force-app/main/default/objects/Opportunity/fields/Replacement_Material_Group__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Material_Group__c</fullName>
    <label>Replacement Material Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RED</fullName>
            </value>
            <value>
                <fullName>REW</fullName>
            </value>
            <value>
                <fullName>REV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>