force-app/main/default/objects/Opportunity/fields/Request_for_quotation_date__c.field-meta.xml
<CustomField>
    <fullName>Request_for_quotation_date__c</fullName>
    <label>Request for quotation date</label>
    <type>Date</type>
</CustomField>