force-app/main/default/objects/Opportunity/fields/Required_Date_of_Manufacturing_RDM__c.field-meta.xml
<CustomField>
    <fullName>Required_Date_of_Manufacturing_RDM__c</fullName>
    <formula>Customer_Promised_Delivery_Date_Final__c - 19</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required Date of Manufacturing (RDM)</label>
    <type>Date</type>
</CustomField>