force-app/main/default/objects/Opportunity/fields/Required_Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Required_Dispatch_Date__c</fullName>
    <formula>Expected_Delivery_Date__c - 15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required Dispatch Date (TSL to Dist)</label>
    <type>Date</type>
</CustomField>