force-app/main/default/objects/Opportunity/fields/Required_Dispatch_Date_Final__c.field-meta.xml
<CustomField>
    <fullName>Required_Dispatch_Date_Final__c</fullName>
    <formula>Customer_Promised_Delivery_Date_Final__c - 13</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required Dispatch Date (Final)</label>
    <type>Date</type>
</CustomField>