force-app/main/default/objects/Opportunity/fields/Response_from_SAP__c.field-meta.xml
<CustomField>
    <fullName>Response_from_SAP__c</fullName>
    <description>Log the response from SAP in order interface at the opportunity level</description>
    <label>Response from SAP</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>